@@ -73,6 +73,9 @@ Trunk (unreleased changes)
 
     AVRO-205. APIs for checking schema resolution. (sbanacho)
 
+    AVRO-203. Reformat license in Python sources.
+    (Jeff Hammerbacher via cutting)
+
   OPTIMIZATIONS
 
     AVRO-172. More efficient schema processing (massie)
